LM-154 Fix lighthouse reporting bad contrast for buttons

--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -1,5 +1,5 @@
 $base-text-color: #0D1563;
 $website-background: #FBF8F4;
-$cta-background-color: #9D66C8;
+$cta-background-color: #6C3696;
 $divider-color: #BDBFD6;
 $inactive-cta-color: #A9A9A9;
